--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,306 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="/dist/tailwind.css" rel="stylesheet" />
-    <title>Title</title>
-</head>
-<body>
-<h1>Ahojda světě</h1>
-</body>
+<!doctype html>
+<html lang="cs" class="scroll-smooth">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Radek Šmiga</title>
+    <link rel="stylesheet" href="/dist/tailwind.css" />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/jquery@3.7/dist/jquery.min.js"
+    ></script>
+    <script src="assets/js/script.js"></script>
+  </head>
+  <body class="font-sans antialiased text-stone-800">
+    <a href="#about" class="sr-only focus:not-sr-only">Přeskočit menu</a>
+
+    <header
+      class="fixed top-0 inset-x-0 bg-white/90 backdrop-blur shadow z-50 h-16 flex items-center"
+    >
+      <div class="max-w-screen-lg mx-auto flex w-full items-center px-4">
+        <span class="font-bold text-lg mr-auto">Radek Šmiga</span>
+        <nav class="space-x-4 md:space-x-8" aria-label="Hlavní navigace">
+          <a href="#about" class="nav-link">O&nbsp;mně</a>
+          <a href="#projects" class="nav-link">Projekty & práce</a>
+          <a href="#gallery" class="nav-link">Galerie</a>
+          <a href="#contact" class="nav-link">Kontakty</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="mt-16">
+      <!--    <section id="hero" tabindex="-1" class="min-h-screen flex items-center justify-center bg-[url('https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?auto=format&fit=crop&w=1950&q=80')] bg-cover bg-center">-->
+      <!--        <div class="overlay-bg rounded-2xl p-8 max-w-lg text-center shadow-lg">-->
+      <!--            <img src="assets/img/profile.jpeg">-->
+      <!--        </div>-->
+      <!--        <div class="overlay-bg rounded-2xl p-8 max-w-lg text-center shadow-lg">-->
+      <!--            <h1 class="text-3xl md:text-5xl font-extrabold mb-4">Radek Šmiga</h1>-->
+      <!--            <p class="text-xl mb-6">Programátor T-SQL, linuxový nadšenec a síťař srdcem</p>-->
+      <!--            <a href="#projects" class="inline-block bg-sky-500 hover:bg-sky-600 text-white font-semibold px-6 py-3 rounded-lg transition">-->
+      <!--                Moje práce-->
+      <!--            </a>-->
+      <!--        </div>-->
+      <!--    </section>-->
+      <section
+        id="hero"
+        tabindex="-1"
+        class="min-h-screen gap-10 md:gap-16 bg-[url('https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?auto=format&fit=crop&w=1950&q=80')] bg-cover bg-center px-6 flex flex-row md:flex-row items-center justify-center"
+      >
+        <div
+          class="flex flex-row md:flex-row items-center justify-center min-h-screen gap-10 md:gap-16"
+        >
+          <div
+            class="overlay-bg rounded-2xl p-4 md:p-6 max-w-sm shadow-lg flex justify-center"
+          >
+            <img
+              src="assets/img/profile.jpeg"
+              alt="Portrét Radek Šmiga"
+              class="w-56 h-56 md:w-72 md:h-72 object-cover rounded-2xl shadow ring-4 ring-white/60"
+            />
+          </div>
+          <div
+            class="overlay-bg rounded-2xl p-8 max-w-lg text-center md:text-left shadow-lg"
+          >
+            <h1 class="text-3xl md:text-5xl font-extrabold mb-4 leading-tight">
+              Radek&nbsp;Šmiga
+            </h1>
+            <p class="text-xl mb-6">
+              Programátor T‑SQL, linuxový nadšenec a síťař srdcem
+            </p>
+            <a
+              href="#projects"
+              class="inline-block bg-sky-500 hover:bg-sky-600 text-white font-semibold px-6 py-3 rounded-lg transition"
+            >
+              Moje práce
+            </a>
+          </div>
+        </div>
+      </section>
+      <section
+        id="about"
+        tabindex="-1"
+        class="min-h-screen flex items-center bg-stone-50"
+      >
+        <div class="max-w-screen-lg mx-auto px-4 py-16">
+          <h2 class="text-3xl font-bold mb-6">O mně</h2>
+          <p class="text-lg leading-relaxed">
+            Jsem student závěrečného ročníku informatiky na VŠB se zálibou v
+            programování, správě sítí a osvojení nových technologií. Během
+            studií jsem se seznámil s širokou škálou technologií – od
+            databázových jazyků (PLSQL, T-SQL) přes backendové jazyky (C#, JAVA)
+            až po moderní frameworky, jako jsou React a NodeJS, a také s různými
+            metodikami vývoje software. Ve volném čase se aktivně věnuji práci s
+            linuxovými systémy a jejich správě. Měl jsem příležitost absolvovat
+            dvě stáže ve firmách TietoEvry a Verizon, kde jsem se zaměřil na
+            správu síťových prvků, komunikaci se zákazníky a řešení incidentů.
+            Poslední rok pracuji v české firmě Kvados jako programátor T-SQL,
+            kde se podílím na tvorbě databázových funkcí a procedur využívaných
+            v produkčním prostředí.
+          </p>
+          <br />
+          <p class="text-lg leading-relaxed">
+            Své volné chvíle si rád krátím hrou na kytaru, prozkoumávání
+            neprozkoumaných oblastí v různých hrách a sebevzděláváním. Kromě
+            toho se věnuji i fitness životu, kdy už několik let trávím několik
+            dnů v týdnu ve fitku, případně chodím na různé výšlapy nebo jen tak
+            běhám. V rámci sebevzdělávání se učím převážně věci spojené s
+            programováním, linuxama, případně mikropočítačy.
+          </p>
+        </div>
+      </section>
+
+      <section id="projects" tabindex="-1" class="min-h-screen py-16">
+        <div class="max-w-screen-lg mx-auto px-4">
+          <h2 class="text-3xl font-bold mb-10">Projekty & práce</h2>
+          <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <article
+              class="group bg-white rounded-2xl shadow-md hover:shadow-xl transition flex flex-col"
+            >
+              <img
+                src="assets/img/lorawan.png"
+                alt="Screenshot projektu"
+                class="rounded-t-2xl aspect-video object-cover"
+              />
+              <div class="p-6 flex flex-col flex-1">
+                <h3 class="text-xl font-semibold mb-2">
+                  LoRaWAN GPS Tracker (IoT)
+                </h3>
+                <p class="text-stone-600 mb-4 flex-1">
+                  Mojí bakalářskou prací bylo malé zařízení, které pomocí
+                  technologií LoRa a LoRaWAN přenáší senzory z dat (GPS,
+                  battery). Tyto data přeposílá na vzdálený server, kde se data
+                  vyhodnocují a zobrazují.
+                </p>
+                <div class="space-x-3 mt-auto">
+                  <a
+                    href="https://theses.cz/id/qkb0ee/"
+                    class="inline-block bg-stone-200 hover:bg-stone-300 text-stone-800 px-4 py-2 rounded-lg text-sm"
+                    >Theses</a
+                  >
+                </div>
+              </div>
+            </article>
+            <article
+              class="group bg-white rounded-2xl shadow-md hover:shadow-xl transition flex flex-col"
+            >
+              <img
+                src="assets/img/kvados.png"
+                alt="Kvados a.s."
+                class="rounded-t-2xl aspect-video object-cover"
+              />
+              <div class="p-6 flex flex-col flex-1">
+                <h3 class="text-xl font-semibold mb-2">TSQL Developer</h3>
+                <p class="text-stone-600 mb-4 flex-1">
+                  Od roku 2024 jsem hrdý zaměstnanec společnosti
+                  <a href="https://www.kvados.cz/" class="text-sky-600"
+                    >Kvados a.s.</a
+                  >, kde zastupuji roli TSQL programátora. Náplní mojí práce je
+                  tvoření databázových procedur, spravování databázových serverů
+                  a případné optimalizace dotazů.
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section
+        id="gallery"
+        tabindex="-1"
+        class="min-h-screen py-16 bg-stone-50"
+      >
+        <div class="max-w-screen-lg mx-auto px-4">
+          <h2 class="text-3xl font-bold mb-10">Galerie</h2>
+
+          <div class="columns-2 md:columns-3 gap-4 space-y-4">
+            <img
+              src="https://placehold.co/400x600?text=1"
+              alt="Photo 1"
+              class="w-full rounded-lg"
+            />
+            <img
+              src="https://placehold.co/400x500?text=2"
+              alt="Photo 2"
+              class="w-full rounded-lg"
+            />
+            <img
+              src="https://placehold.co/400x550?text=3"
+              alt="Photo 3"
+              class="w-full rounded-lg"
+            />
+            <img
+              src="https://placehold.co/400x400?text=4"
+              alt="Photo 4"
+              class="w-full rounded-lg"
+            />
+            <img
+              src="https://placehold.co/400x650?text=5"
+              alt="Photo 5"
+              class="w-full rounded-lg"
+            />
+            <img
+              src="https://placehold.co/400x450?text=6"
+              alt="Photo 6"
+              class="w-full rounded-lg"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="bg-white border-t py-6" id="contact">
+      <div class="flex items-center justify-center gap-6 mt-8">
+        <a
+          href="https://github.com/smigarad"
+          target="_blank"
+          aria-label="GitHub"
+          class="transition hover:scale-110"
+        >
+          <svg
+            class="w-6 h-6 text-stone-500 hover:text-sky-600"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 .297a12 12 0 00-3.79 23.4c.6.11.82-.26.82-.58v-2.16c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.35-1.76-1.35-1.76-1.1-.74.08-.73.08-.73 1.21.09 1.86 1.24 1.86 1.24 1.08 1.84 2.84 1.31 3.53 1 .11-.79.43-1.31.78-1.61-2.67-.3-5.47-1.34-5.47-5.96 0-1.32.47-2.39 1.24-3.24-.12-.3-.54-1.53.12-3.18 0 0 1.01-.32 3.3 1.23A11.5 11.5 0 0112 6.8c1.02.01 2.05.14 3.01.42 2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.88.12 3.18.77.85 1.23 1.92 1.23 3.24 0 4.63-2.8 5.66-5.48 5.96.44.38.83 1.11.83 2.24v3.32c0 .32.22.69.83.57A12 12 0 0012 .297z"
+            />
+          </svg>
+        </a>
+
+        <a
+          href="https://instagram.com/radek_smiga"
+          target="_blank"
+          aria-label="Instagram"
+          class="transition hover:scale-110"
+        >
+          <svg
+            class="w-6 h-6 text-stone-500 hover:text-sky-600"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M7.75 2h8.5A5.76 5.76 0 0122 7.75v8.5A5.76 5.76 0 0116.25 22h-8.5A5.76 5.76 0 012 16.25v-8.5A5.76 5.76 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5A3.75 3.75 0 0020 16.25v-8.5A3.75 3.75 0 0016.25 4h-8.5zm8.75 1.5a1 1 0 110 2 1 1 0 010-2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6z"
+            />
+          </svg>
+        </a>
+
+        <a
+          href="https://www.facebook.com/Oni.Michi/"
+          target="_blank"
+          aria-label="Facebook"
+          class="transition hover:scale-110"
+        >
+          <svg
+            class="w-6 h-6 text-stone-500 hover:text-sky-600"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M13.3 22V12.3h3.27l.49-3.54H13.3V6.66c0-1.02.28-1.71 1.76-1.71h1.88V1.7A25.39 25.39 0 0013.9 1c-2.7 0-4.55 1.64-4.55 4.65v2.07H7v3.54h2.35V22h3.95z"
+            />
+          </svg>
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/radek-%C5%A1miga/"
+          target="_blank"
+          aria-label="LinkedIn"
+          class="transition hover:scale-110"
+        >
+          <svg
+            class="w-6 h-6 text-stone-500 hover:text-sky-600"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M4.98 3.5C4.98 5 3.9 6 2.5 6S0 5 0 3.5A3 3 0 012.5 1a3 3 0 012.48 2.5zM.26 8.17h4.53V22H.26zM8.47 8.17h4.33v1.89h.06c.6-1.14 2.06-2.35 4.24-2.35 4.54 0 5.38 2.98 5.38 6.86V22h-4.53v-7.29c0-1.74-.03-4-2.43-4-2.43 0-2.81 1.9-2.81 3.88V22H8.47z"
+            />
+          </svg>
+        </a>
+        <a
+          href="mailto:onimitchi@gmail.com"
+          aria-label="E-mail"
+          class="transition hover:scale-110"
+        >
+          <svg
+            class="w-6 h-6 text-stone-500 hover:text-sky-600"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M22 6.5v11A4.5 4.5 0 0 1 17.5 22h-11A4.5 4.5 0 0 1 2 17.5v-11A4.5 4.5 0 0 1 6.5 2h11A4.5 4.5 0 0 1 22 6.5Zm-2 .19-7.3 5.66a1 1 0 0 1-1.4 0L4 6.69v10.81A2.5 2.5 0 0 0 6.5 20h11a2.5 2.5 0 0 0 2.5-2.5V6.69ZM6.83 4a2.5 2.5 0 0 0-2.33 1.63l7.5 5.82 7.5-5.82A2.5 2.5 0 0 0 17.17 4Z"
+            />
+          </svg>
+        </a>
+      </div>
+      <p class="text-center text-xs text-stone-400 mt-4">
+        ©2025 Radek Šmiga • All rights reserved.
+      </p>
+    </footer>
+  </body>
 </html>
